# branchgen

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/app/: action.rs  editor.rs  generator.rs  init.rs  input_mode.rs  mod.rs  run.rs  state.rs  update.rs  validators.rs
src/config/: app_config.rs
src/domain/: field.rs  history.rs  mod.rs  types.rs
src/storage/: json_store.rs
src/ui/: event.rs  mod.rs  output.rs  prompt.rs  terminal.rs  tui.rs
